# model-checking-20

./: CourseSchedule.ods  MCSVZ3demo  README.md  course-summary  course-summary.tex
modeling/: intro.aux  intro.nav  intro.tex  modeling1.aux  modeling1.nav  modeling1.tex  modeling1.toc
tut1/: Pigeon.hs  Queens.hs  Sudoku.hs  sudoku  sudoku1  sudoku2  trans.z3  tut1.cabal
tut2/: ex1.smv  mut.smv  sym.smv
